# apt

./: README.md
apt_back/: README.md  demo.env  manage.py  pyproject.toml  requirements.txt
apt_back/apt_back/: .gitignore  asgi.py  settings.py  urls.py  wsgi.py
apt_back/product/: admin.py  models.py  serializers.py  urls.py  views.py
apt_back/product/migrations/: 0001_initial.py  0002_product_date_added.py
apt_front/: README.md  index.html  package.json
apt_front/src/: main.ts
apt_front/src/components/: EditProductModal.vue  ProductModal.vue  Search.vue  Table.vue
apt_front/src/views/: HomeView.vue
